--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -43,15 +43,12 @@ jobs:
   k6-browser:
     name: K6 Browser
     runs-on: ubuntu-latest
-    container: node:18-slim
+    container: 
+      image: grafana/k6:master-with-browser
+      options: --user root
     needs: [build-frontend, build-localtest]
     steps:
       - uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5
-
-      - name: Install system dependencies
-        run: |
-          apt-get update
-          apt-get install -y curl nslookup docker.io
 
       - name: Run Local Environment
         uses: ./.github/actions/app-run-local-env
@@ -59,11 +56,6 @@ jobs:
           run-frontend: true
           run-localtest: true
           docker-profile: 'test-apps'
-
-      - name: Setup k6 with browser support
-        uses: grafana/setup-k6-action@ffe7d7290dfa715e48c2ccc924d068444c94bde2
-        with:
-          browser: true
 
       - name: Test network connectivity
         run: |
