--- a/.github/workflows/app-frontend-codeql.yml
+++ b/.github/workflows/app-frontend-codeql.yml
@@ -8,10 +8,11 @@ on:
       - '.github/workflows/app-frontend-codeql.yml'
   workflow_dispatch:
   schedule:
-    - cron: "5 12 * * 0"
+    - cron: '5 12 * * 0'
 
 jobs:
   analyze:
+    if: ${{ false }}
     name: Analyze
     runs-on: ubuntu-latest
     defaults:
@@ -25,7 +26,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ javascript ]
+        language: [javascript]
 
     steps:
       - name: Checkout
@@ -43,4 +44,4 @@ jobs:
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@bffd034ab1518ad839a542b8a7356e13a240e076 # v3
         with:
-          category: "/language:${{ matrix.language }}"
+          category: '/language:${{ matrix.language }}'
