--- a/.github/workflows/app-frontend-cypress.yml
+++ b/.github/workflows/app-frontend-cypress.yml
@@ -22,6 +22,7 @@ concurrency:
 
 jobs:
   build-frontend:
+    if: ${{ false }}
     name: Build Frontend
     runs-on: ubuntu-latest
     steps:
@@ -31,6 +32,7 @@ jobs:
         uses: ./.github/actions/app-build-frontend
 
   build-docker-images:
+    if: ${{ false }}
     name: Build Docker Images
     runs-on: ubuntu-latest
     steps:
@@ -43,10 +45,11 @@ jobs:
 
   cypress-run-internal:
     name: Cypress Run Internal
-    if: |
-      github.repository_owner == 'Altinn' &&
-      (github.event_name != 'pull_request' && github.event.repository.fork == false) ||
-      (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false)
+    if: ${{ false }}
+    # if: |
+    #   github.repository_owner == 'Altinn' &&
+    #   (github.event_name != 'pull_request' && github.event.repository.fork == false) ||
+    #   (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false)
     runs-on: ubuntu-latest
     timeout-minutes: 60
     needs: [build-frontend, build-docker-images]
