--- a/.github/workflows/app-frontend-lighthouse-ci.yml
+++ b/.github/workflows/app-frontend-lighthouse-ci.yml
@@ -19,6 +19,7 @@ on:
   workflow_dispatch:
 jobs:
   build-frontend:
+    if: ${{ false }}
     timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
@@ -28,6 +29,7 @@ jobs:
         uses: ./.github/actions/app-build-frontend
 
   build-localtest:
+    if: ${{ false }}
     timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
@@ -39,6 +41,7 @@ jobs:
           docker-profile: 'test-apps'
 
   lighthouse:
+    if: ${{ false }}
     name: Lighthouse CI
     runs-on: ubuntu-latest
     needs: [build-frontend, build-localtest]
