--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -52,12 +52,13 @@ jobs:
 
       - name: Install bash and dependencies
         run: |
-          apk add --no-cache bash curl docker
+          apk update
+          apk add --no-cache bash curl docker docker-cli-compose
 
       - name: Test Docker setup
         run: |
           docker --version
-          docker compose version || echo "Docker compose not available"
+          docker compose version
 
       - name: Run Local Environment
         uses: ./.github/actions/app-run-local-env
