--- a/.github/workflows/app-frontend-k6-browser.yml
+++ b/.github/workflows/app-frontend-k6-browser.yml
@@ -43,22 +43,14 @@ jobs:
   k6-browser:
     name: K6 Browser
     runs-on: ubuntu-latest
-    container: 
-      image: grafana/k6:master-with-browser
-      options: --user root
     needs: [build-frontend, build-localtest]
     steps:
       - uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5
 
-      - name: Install bash and dependencies
-        run: |
-          apk update
-          apk add --no-cache bash curl docker docker-cli-compose yarn
-
-      - name: Test Docker setup
-        run: |
-          docker --version
-          docker compose version
+      - name: Setup k6 with browser support
+        uses: grafana/setup-k6-action@ffe7d7290dfa715e48c2ccc924d068444c94bde2
+        with:
+          browser: true
 
       - name: Run Local Environment
         uses: ./.github/actions/app-run-local-env
